standardise the spacing on the popups, fixed banners/conclave

--- a/less/gameboard.less
+++ b/less/gameboard.less
@@ -213,6 +213,12 @@
   }
 }
 
+.inner {
+  .card-wrapper {
+    margin: 5px 5px 0 0;
+  }
+}
+
 .our-side {
   .plot {
     .popup {
@@ -272,10 +278,6 @@
     .inner {
       min-width: @card-height * 2 + (2 * 5px);
       min-height: @card-width * 2 + (2 * 5px);
-
-      .card-wrapper {
-        margin: 5px 5px 0 0;
-      }
     }
 
     .arrow {
@@ -324,10 +326,6 @@
       width: @card-width * 5 + (5 * 5px) + @scrollbar-width;
       max-height: @card-height * 4 + (4 * 5px);
       overflow-y: auto;
-
-      .card-wrapper {
-        margin: 5px 5px 0 0;
-      }
     }
 
     .arrow {
@@ -349,10 +347,6 @@
       width: @card-width * 5 + (5 * 5px) + @scrollbar-width;
       max-height: @card-height * 4 + (4 * 5px);
       overflow-y: auto;
-
-      .card-wrapper {
-        margin: 5px 5px 0 0;
-      }
     }
 
     .arrow {
@@ -381,10 +375,6 @@
       max-height: @card-height * 4 + (4 * 5px);
 
       overflow-y: auto;
-
-      .card-wrapper {
-        margin: 5px 5px 0 0;
-      }
     }
   }
 
